# sales-forecasting

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  MISSION.md  Makefile  NOTES.md  RESOURCES.md  backtest.py  compose.yaml  conftest.py  daily_capture.py  daily_forecast.py  db.py  env.py  forecast.py  forecast_engine.py  ingest.py  inspection_page.py  migrate.py  model_comparison.html  model_comparison.py  models.py  normalize.py  pyproject.toml  sales_history.py  schema.sql  toast_client.py  toast_orders.py
.github/workflows/: apply-schema.yml  daily-capture.yml  daily-forecast.yml
.scratch/bagel-forecast-pilot/: PRD.md
.scratch/bagel-forecast-pilot/issues/: 01-ingest-bagel-sales-history.md  02-demand-forecast-and-family-rollup.md  03-backtest-and-inspection-notebook.md
.scratch/bake-forecast-model-comparison/: PRD.md
.scratch/bake-forecast-model-comparison/issues/: 01-narrow-baked-bagel-scope.md  02-pinball-wape-and-p95-buffer.md  03-rolling-origin-evaluator-poolish-total.md  04-pandas-candidate-models.md  05-holt-winters-ets-candidate.md  06-bake-split-sub-comparison.md  07-inspection-notebook-and-recommendation.md  08-promote-poolish-and-split-winners.md
.scratch/daily-forecast-log/: PRD.md
.scratch/daily-forecast-log/issues/: 01-forecast-config-and-log-schema.md  02-generalize-model-callables-product-scope.md  03-forecast-engine-run-forecasts.md  04-db-read-config-and-write-once-forecasts.md  05-scheduled-forecast-workflow.md  06-retire-parquet-path-supersede-ticket-08.md
.scratch/docker-dev-environment/: PRD.md
.scratch/docker-dev-environment/issues/: 01-compose-environment-runs-suite-against-postgres-17.md  02-fix-what-the-first-integration-run-exposes.md  03-remove-pgserver-fallback-and-add-makefile.md  04-test-yml-first-ci-test-run.md  05-correct-the-docs-and-record-adr-0008.md  06-consolidate-the-duplicated-db-test-fixtures.md
.scratch/postgres-daily-ingestion/issues/: 01-single-sales-history-loader.md  02-postgres-schema.md  03-migrate-existing-history.md  04-readers-read-from-postgres.md  05-daily-orders-capture-trailing-window.md  06-scheduled-github-actions-job.md  07-retire-the-file-based-path.md  08-batch-the-sales-upsert-helper.md
.scratch/retire-inspection-notebook/: PRD.md
assets/: lesson.css
data/: demand_forecast.parquet  sales_forecast.parquet  sales_history.parquet
data/raw/: daily_totals_20160101_20161231__20260709T213757Z.json  daily_totals_20170101_20171231__20260709T213750Z.json  daily_totals_20180101_20181231__20260709T213742Z.json  daily_totals_20190101_20191231__20260709T213730Z.json  daily_totals_20200101_20201231__20260709T213717Z.json  daily_totals_20210101_20211231__20260709T213703Z.json  daily_totals_20220101_20221231__20260709T213638Z.json  daily_totals_20230101_20231231__20260709T213611Z.json  daily_totals_20240101_20241231__20260709T201628Z.json  daily_totals_20250101_20251231__20260709T201558Z.json  daily_totals_20260101_20260709__20260709T201521Z.json  daily_totals_20260101_20260709__20260709T213545Z.json  menu_week_20260502_20260508__20260710T122903Z.json  menu_week_20260509_20260515__20260710T122852Z.json  menu_week_20260516_20260522__20260710T122842Z.json  menu_week_20260523_20260529__20260710T122831Z.json  menu_week_20260530_20260605__20260710T122819Z.json  menu_week_20260606_20260612__20260710T122811Z.json  menu_week_20260613_20260619__20260710T122758Z.json  menu_week_20260620_20260626__20260710T122747Z.json  menu_week_20260627_20260703__20260710T122737Z.json  menu_week_20260704_20260709__20260710T083815Z.json  orders_agg_201607__20260710T230605Z.json  orders_agg_201608__20260710T223055Z.json  orders_agg_201609__20260710T222446Z.json  orders_agg_201610__20260710T222240Z.json  orders_agg_201611__20260710T222025Z.json  orders_agg_201612__20260710T221826Z.json  orders_agg_201701__20260710T215913Z.json  orders_agg_201702__20260710T215712Z.json  orders_agg_201703__20260710T215500Z.json  orders_agg_201704__20260710T215230Z.json  orders_agg_201705__20260710T214512Z.json  orders_agg_201706__20260710T214243Z.json  orders_agg_201707__20260710T210534Z.json  orders_agg_201708__20260710T210033Z.json  orders_agg_201709__20260710T205723Z.json  orders_agg_201710__20260710T205436Z.json  orders_agg_201711__20260710T205110Z.json  orders_agg_201712__20260710T204835Z.json  (+104 more)
docker/: no-secrets.env
docs/: forecast-model-evaluation.md  postgres.md  scheduled-capture.md  scheduled-forecast.md  toast-analytics-api.md
docs/adr/: 0001-two-stage-poolish-bake-forecast.md  0002-score-bake-forecasts-on-pinball-and-wape.md  0003-toast-ingestion-moves-to-scheduled-github-actions-and-postgres.md  0004-daily-capture-uses-orders-api-only-with-a-trailing-window.md  0005-canonical-sales-is-a-source-to-product-model.md  0006-daily-forecasts-are-a-config-driven-write-once-log.md  0007-apply-schema-via-github-actions-on-push-to-main.md  0009-retire-the-inspection-notebook.md
learning-records/: 0001-pinball-95-calculation.md
lessons/: 0001-pinball-95-concretely.html
notebooks/: exploration.ipynb
reference/: quantile-loss.html
tests/: test_backtest.py  test_daily_capture.py  test_daily_forecast.py  test_db.py  test_env.py  test_forecast.py  test_forecast_engine.py  test_ingest.py  test_inspection_page.py  test_migrate.py  test_model_comparison.py  test_models.py  test_normalize.py  test_sales_history.py  test_toast_client.py  test_toast_orders.py
tests/fixtures/: menu_week_freetext_modifier_row.json  menu_week_modifier_sample.json  orders_bulk_synthetic.json  restaurants_information_sample.json
