[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecasting"
version = "0.1.0"
description = "Sales forecasting scripts"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    # Postgres access (ADR 0003). db.py reads/writes the Sales pipeline tables.
    "psycopg[binary]",
    # Reads the .env file into the environment (env.py). A runner has no .env
    # and takes the same names from secrets, so this is a no-op there.
    "python-dotenv",
]

[project.optional-dependencies]
# The dev install pulls in the DB test wheel too, so `pytest` boots a throwaway
# local Postgres by default (see conftest.py) and the DB integration tests run
# out of the box.
dev = [
    "pytest",
    "sales-forecasting[testdb]",
]
# The DB integration tests only, split out so it can be installed on its own. By
# default `pytest` boots a throwaway local Postgres from this wheel (bundled
# binaries --- no Docker, no system install) and points TEST_DATABASE_URL at it.
# Without the wheel (a `dev`-less install) those tests skip rather than fail, so
# the suite still runs; `--no-ephemeral-postgres` skips them even when present.
testdb = [
    "pgserver",
]
# The inspection notebook only. Nothing under test imports these, so the test
# suite still runs on a `dev`-only install.
notebook = [
    "matplotlib",
    "jupyter",
]
# The ETS / Holt-Winters model in models.py only, imported lazily so importing
# the module never requires it. Nothing under test requires it — the ETS tests
# importorskip it — so the suite still runs on a `dev`-only install; the deployed
# daily forecast job installs this extra to run Holt-Winters.
forecast = [
    "statsmodels",
]

# Flat layout: the pipeline is a set of top-level scripts run in place
# (`python daily_capture.py`) with the repo root on sys.path — see the tests'
# `pythonpath = ["."]` below. Installing this project (as the GitHub Actions
# capture does with `pip install -e .`) means installing its dependencies, not
# shipping an importable package. `py-modules = []` opts out of setuptools'
# flat-layout auto-discovery, which would otherwise try to package the sibling
# `data/` and `notebooks/` directories and fail on the ambiguity.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
