[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecasting"
version = "0.1.0"
description = "Sales forecasting scripts"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    # Postgres access (ADR 0003). db.py reads/writes the Sales pipeline tables.
    "psycopg[binary]",
    # Reads the .env file into the environment (env.py). A runner has no .env
    # and takes the same names from secrets, so this is a no-op there.
    "python-dotenv",
]

[project.optional-dependencies]
# Nothing here provisions a test database. The DB integration tests read
# TEST_DATABASE_URL from the environment (see conftest.py) and the `test`
# service in compose.yaml is what sets it, so the throwaway Postgres is a
# container rather than a dependency.
dev = [
    "pytest",
]
# The ETS / Holt-Winters model in models.py only, imported lazily so importing
# the module never requires it. Nothing under test requires it — the ETS tests
# importorskip it — so the suite still runs on a `dev`-only install; the deployed
# daily forecast job installs this extra to run Holt-Winters.
forecast = [
    "statsmodels",
]

# Flat layout: the pipeline is a set of top-level scripts run in place
# (`python daily_capture.py`) with the repo root on sys.path — see the tests'
# `pythonpath = ["."]` below. Installing this project (as the GitHub Actions
# capture does with `pip install -e .`) means installing its dependencies, not
# shipping an importable package. `py-modules = []` opts out of setuptools'
# flat-layout auto-discovery, which would otherwise sweep up whatever sibling
# directories a machine happens to have — `data/` is gitignored and generated,
# so what discovery finds varies by clone. Opting out keeps the install
# module-less regardless.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
